--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ bOSS_django/bOSS_django/.env
 bOSS_django/bOSS_app/migrations
 bOSS_django/bOSS_django/__pycache__
 bOSS_django/bOSS_app/__pycache__
+bOSS_env
