--- a/vercel.json
+++ b/vercel.json
@@ -1,30 +1,28 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "bOSS_django/bOSS_django/wsgi.py",
-            "use": "@ardnt/vercel-python-wsgi",
-            "config": {
-                "maxLambdaSize": "15mb",
-                "runtime": "python3.9"
-            }
-        },
-        {
-            "src": "build_files.sh",
-            "use": "@vercel/static-build",
-            "config": {
-                "distDir": "staticfiles"
-            }
-        }
-    ],
-    "routes": [
-        {
-            "src": "/static/(.*)",
-            "dest": "/static/$1"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "bOSS_django/bOSS_django/wsgi.py"
-        }
-    ]
+  "version": 2,
+  "builds": [
+    {
+      "src": "bOSS_REACT/package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "bOSS_REACT/build" }
+    },
+    {
+      "src": "bOSS_django/bOSS_django/manage.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/static/(.*)",
+      "dest": "boSS_REACT/static/$1"
+    },
+    {
+      "src": "/api/(.*)",
+      "dest": "bOSS_django/bOSS_django/manage.py"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "bOSS_REACT/index.html"
+    }
+  ]
 }
